hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__max_all@surface_graph.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: graph.surface_syntax_string()
---
1v1 = merge ();
2v1 = tee ();
3v1 = merge ();
4v1 = tee ();
5v1 = source_stream (ints);
6v1 = for_each (| v | result . send (v) . unwrap ());
7v1 = map (| row : (_ , _ ,) | (() , (row . 0 , row . 1 ,)));
8v1 = group_by :: < 'tick , () , (Option < _ > , Option < _ > ,) > (| | (None , None ,) , | old : & mut (Option < _ > , Option < _ > ,) , val : (_ , _ ,) | { old . 0 = if let Some (prev) = old . 0 { Some (std :: cmp :: max (prev , val . 0)) } else { Some (val . 0) } ; old . 1 = if let Some (prev) = old . 1 { Some (std :: cmp :: max (prev , val . 1)) } else { Some (val . 1) } ; });
9v1 = map (| (g , a) | (a . 0 . unwrap () , a . 1 . unwrap () ,));

(1v1-->2v1);
(3v1-->4v1);
(5v1-->1v1);
(4v1-->6v1);
(9v1-->3v1);
(8v1-->9v1);
(7v1-->8v1);
(2v1-->7v1);

